update to index and css for layout issues

--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ button {
   float: right;
   margin-left: 10px;
   overflow-y: scroll;
-  height: 400px;
+  height: 600px;
   position: relative;
 }
 
